# Dark-forest-server

./: .env.example  .gitignore  README.md  docker-compose.yml  endpoints_documentation.md  pyproject.toml  requirements.txt
client/: client.py
stats/: Dockerfile  db.sqlite3  manage.py  pytest.ini  requirements.txt
stats/stats/: asgi.py  settings.py  urls.py  wsgi.py
stats/stats_server/: admin.py  apps.py  models.py  urls.py  views.py
stats/stats_server/migrations/: 0001_initial.py  0002_remove_stats_username_stats_user.py  0003_rename_user_stats_username.py  0004_alter_stats_username.py  0005_best_score_rename_best_score_stats_all_gold_and_more.py  0006_alter_best_score_options_alter_stats_options.py  0007_alter_stats_table.py  0008_alter_best_score_options_alter_stats_options_and_more.py  0009_alter_stats_options.py  0010_rename_best_score_bestscore.py
stats/stats_server/templates/: create_user.html  login.html
stats/stats_server/tests/: conftest.py  tests.py
